# Copyright 2016 Google Inc.
#
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

android_framework_defines = [
  "SK_SUPPORT_LEGACY_UNBALANCED_PIXELREF_LOCKCOUNT",

  # Needed until we fix https://bug.skia.org/2440 .
  "SK_SUPPORT_LEGACY_CLIPTOLAYERFLAG",
  "SK_IGNORE_LINEONLY_AA_CONVEX_PATH_OPTS",
  "SK_SUPPORT_LEGACY_GRADIENT_DITHERING",
  "SK_SUPPORT_LEGACY_DRAWFILTER",
  "SK_IGNORE_GPU_DITHER",
  "SK_SUPPORT_LEGACY_CANVAS_IS_REFCNT",
  "SK_SUPPORT_LEGACY_CLIP_REGIONOPS",
  "SK_SUPPORT_LEGACY_IMAGE_ENCODER_CLASS",
  "SK_SUPPORT_LEGACY_SHADER_ISABITMAP",

  # These are not temporary.
  'GR_GL_CUSTOM_SETUP_HEADER="gl/GrGLConfig_chrome.h"',
  'SKIA_DLL',
  'SK_BUILD_FOR_ANDROID_FRAMEWORK',
  'SK_DEFAULT_FONT_CACHE_LIMIT=(768*1024)',
  'SK_DEFAULT_GLOBAL_DISCARDABLE_MEMORY_POOL_SIZE=(512*1024)',
  'SK_IGNORE_ETC1_SUPPORT',
  'SK_USE_FREETYPE_EMBOLDEN',
]
