# Copyright 2016 Google Inc.
#
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

android_framework_defines = [
  "SK_SUPPORT_LEGACY_UNBALANCED_PIXELREF_LOCKCOUNT",

  # Needed until we fix https://bug.skia.org/2440 .
  "SK_SUPPORT_LEGACY_CLIPTOLAYERFLAG",
  "SK_IGNORE_LINEONLY_AA_CONVEX_PATH_OPTS",
  "SK_SUPPORT_LEGACY_GRADIENT_DITHERING",
  "SK_SUPPORT_LEGACY_DRAWFILTER",
  "SK_IGNORE_GPU_DITHER",
  "SK_SUPPORT_LEGACY_BITMAP_SETPIXELREF",
  "SK_SUPPORT_LEGACY_SHADER_ISABITMAP",
  "SK_SUPPORT_LEGACY_EMBOSSMASKFILTER",
  "SK_SUPPORT_LEGACY_CANVAS_HELPERS",
  "SK_SUPPORT_LEGACY_PATHEFFECT_SUBCLASSES",
]
