# Copyright 2016 Google Inc.
#
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

android_framework_defines = [
  # Needed until we fix https://bug.skia.org/2440 .
  "SK_SUPPORT_LEGACY_CLIPTOLAYERFLAG",
  "SK_IGNORE_LINEONLY_AA_CONVEX_PATH_OPTS",
  "SK_SUPPORT_LEGACY_GRADIENT_DITHERING",
  "SK_SUPPORT_LEGACY_DRAWFILTER",
  "SK_SUPPORT_LEGACY_PIXELREF_API",
  "SK_IGNORE_GPU_DITHER",
  "SK_SUPPORT_LEGACY_SHADER_ISABITMAP",
  "SK_SUPPORT_LEGACY_EMBOSSMASKFILTER",
]
