# Copyright 2016 Google Inc.
#
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# Things are easiest for everyone if these source paths are absolute.

skia_core_public = get_path_info([
  "../include/core/SkAnnotation.h",
  "../include/core/SkBBHFactory.h",
  "../include/core/SkBitmap.h",
  "../include/core/SkBlendMode.h",
  "../include/core/SkBlurTypes.h",
  "../include/core/SkCanvas.h",
  "../include/core/SkCanvasVirtualEnforcer.h",
  "../include/core/SkClipOp.h",
  "../include/core/SkColor.h",
  "../include/core/SkColorFilter.h",
  "../include/core/SkColorPriv.h",
  "../include/core/SkColorSpace.h",
  "../include/core/SkColorSpaceXformCanvas.h",
  "../include/core/SkContourMeasure.h",
  "../include/core/SkCoverageMode.h",
  "../include/core/SkCubicMap.h",
  "../include/core/SkData.h",
  "../include/core/SkDataTable.h",
  "../include/core/SkDeferredDisplayListRecorder.h",
  "../include/core/SkDeque.h",
  "../include/core/SkDocument.h",
  "../include/core/SkDrawLooper.h",
  "../include/core/SkDrawable.h",
  "../include/core/SkEncodedImageFormat.h",
  "../include/core/SkExecutor.h",
  "../include/core/SkFilterQuality.h",
  "../include/core/SkFlattenable.h",
  "../include/core/SkFont.h",
  "../include/core/SkFontArguments.h",
  "../include/core/SkFontLCDConfig.h",
  "../include/core/SkFontMetrics.h",
  "../include/core/SkFontMgr.h",
  "../include/core/SkFontParameters.h",
  "../include/core/SkFontStyle.h",
  "../include/core/SkFontTypes.h",
  "../include/core/SkGraphics.h",
  "../include/core/SkICC.h",
  "../include/core/SkImage.h",
  "../include/core/SkImageEncoder.h",
  "../include/core/SkImageFilter.h",
  "../include/core/SkImageGenerator.h",
  "../include/core/SkImageInfo.h",
  "../include/core/SkMallocPixelRef.h",
  "../include/core/SkMaskFilter.h",
  "../include/core/SkMath.h",
  "../include/core/SkMatrix.h",
  "../include/core/SkMatrix44.h",
  "../include/core/SkMilestone.h",
  "../include/core/SkMixer.h",
  "../include/core/SkOverdrawCanvas.h",
  "../include/core/SkPaint.h",
  "../include/core/SkPath.h",
  "../include/core/SkPathEffect.h",
  "../include/core/SkPathMeasure.h",
  "../include/core/SkPixelRef.h",
  "../include/core/SkPixmap.h",
  "../include/core/SkPngChunkReader.h",
  "../include/core/SkPoint.h",
  "../include/core/SkPoint3.h",
  "../include/core/SkPostConfig.h",
  "../include/core/SkPreConfig.h",
  "../include/core/SkPromiseImageTexture.h",
  "../include/core/SkRRect.h",
  "../include/core/SkRSXform.h",
  "../include/core/SkRWBuffer.h",
  "../include/core/SkRasterHandleAllocator.h",
  "../include/core/SkRect.h",
  "../include/core/SkRefCnt.h",
  "../include/core/SkRegion.h",
  "../include/core/SkScalar.h",
  "../include/core/SkSerialProcs.h",
  "../include/core/SkShader.h",
  "../include/core/SkSize.h",
  "../include/core/SkStream.h",
  "../include/core/SkString.h",
  "../include/core/SkStrokeRec.h",
  "../include/core/SkSurface.h",
  "../include/core/SkSurfaceCharacterization.h",
  "../include/core/SkSurfaceProps.h",
  "../include/core/SkSwizzle.h",
  "../include/core/SkTLazy.h",
  "../include/core/SkTextBlob.h",
  "../include/core/SkTime.h",
  "../include/core/SkTraceMemoryDump.h",
  "../include/core/SkTypeface.h",
  "../include/core/SkTypes.h",
  "../include/core/SkUnPreMultiply.h",
  "../include/core/SkVertices.h",
  "../include/core/SkYUVAIndex.h",
  "../include/core/SkYUVASizeInfo.h",
], "abspath")

skia_core_sources = get_path_info([
  "../src/c/sk_imageinfo.cpp",
  "../src/c/sk_paint.cpp",
  "../src/c/sk_surface.cpp",
  "../src/c/sk_types_priv.h",

  "../src/core/Sk4px.h",
  "../src/core/SkAAClip.cpp",
  "../src/core/SkAnnotation.cpp",
  "../src/core/SkAdvancedTypefaceMetrics.h",
  "../src/core/SkAlphaRuns.cpp",
  "../src/core/SkAntiRun.h",
  "../src/core/SkATrace.cpp",
  "../src/core/SkATrace.h",
  "../src/core/SkAutoPixmapStorage.h",
  "../src/core/SkAutoPixmapStorage.cpp",
  "../src/core/SkBBHFactory.cpp",
  "../src/core/SkBBoxHierarchy.h",
  "../src/core/SkBitmap.cpp",
  "../src/core/SkBitmapCache.cpp",
  "../src/core/SkBitmapController.cpp",
  "../src/core/SkBitmapDevice.cpp",
  "../src/core/SkBitmapDevice.h",
  "../src/core/SkBitmapProcState.cpp",
  "../src/core/SkBitmapProcState.h",
  "../src/core/SkBitmapProcState_matrixProcs.cpp",
  "../src/core/SkBitmapProvider.cpp",
  "../src/core/SkBitmapProvider.h",
  "../src/core/SkBlendMode.cpp",
  "../src/core/SkBlitBWMaskTemplate.h",
  "../src/core/SkBlitRow.h",
  "../src/core/SkBlitRow_D32.cpp",
  "../src/core/SkBlitter.h",
  "../src/core/SkBlitter.cpp",
  "../src/core/SkBlitter_A8.cpp",
  "../src/core/SkBlitter_ARGB32.cpp",
  "../src/core/SkBlitter_RGB565.cpp",
  "../src/core/SkBlitter_Sprite.cpp",
  "../src/core/SkBlurMask.cpp",
  "../src/core/SkBlurMask.h",
  "../src/core/SkBlurMF.cpp",
  "../src/core/SkBuffer.cpp",
  "../src/core/SkCachedData.cpp",
  "../src/core/SkCanvas.cpp",
  "../src/core/SkCanvasPriv.cpp",
  "../src/core/SkCanvasPriv.h",
  "../src/core/SkCoverageDelta.h",
  "../src/core/SkCoverageDelta.cpp",
  "../src/core/SkClipStack.cpp",
  "../src/core/SkClipStack.h",
  "../src/core/SkClipStackDevice.cpp",
  "../src/core/SkClipStackDevice.h",
  "../src/core/SkColor.cpp",
  "../src/core/SkColorFilter.cpp",
  "../src/core/SkColorMatrixFilterRowMajor255.cpp",
  "../src/core/SkColorMatrixFilterRowMajor255.h",
  "../src/core/SkColorSpace.cpp",
  "../src/core/SkColorSpaceXformCanvas.cpp",
  "../src/core/SkColorSpaceXformSteps.cpp",
  "../src/core/SkColorSpaceXformer.cpp",
  "../src/core/SkColorSpaceXformer.h",
  "../src/core/SkContourMeasure.cpp",
  "../src/core/SkConvertPixels.cpp",
  "../src/core/SkConvertPixels.h",
  "../src/core/SkCoreBlitters.h",
  "../src/core/SkCpu.cpp",
  "../src/core/SkCpu.h",
  "../src/core/SkCubicClipper.cpp",
  "../src/core/SkCubicClipper.h",
  "../src/core/SkCubicMap.cpp",
  "../src/core/SkData.cpp",
  "../src/core/SkDataTable.cpp",
  "../src/core/SkDebug.cpp",
  "../src/core/SkDeferredDisplayListPriv.h",
  "../src/core/SkDeferredDisplayList.cpp",
  "../src/core/SkDeferredDisplayListRecorder.cpp",
  "../src/core/SkDeque.cpp",
  "../src/core/SkDescriptor.cpp",
  "../src/core/SkDescriptor.h",
  "../src/core/SkDevice.cpp",
  "../src/core/SkDevice.h",
  "../src/core/SkDiscardableMemory.h",
  "../src/lazy/SkDiscardableMemoryPool.cpp",
  "../src/core/SkDistanceFieldGen.cpp",
  "../src/core/SkDistanceFieldGen.h",
  "../src/core/SkDocument.cpp",
  "../src/core/SkDraw.cpp",
  "../src/core/SkDraw_text.cpp",
  "../src/core/SkDraw_vertices.cpp",
  "../src/core/SkDraw.h",
  "../src/core/SkDrawable.cpp",
  "../src/core/SkDrawLooper.cpp",
  "../src/core/SkDrawProcs.h",
  "../src/core/SkDrawShadowInfo.cpp",
  "../src/core/SkDrawShadowInfo.h",
  "../src/core/SkEdgeBuilder.cpp",
  "../src/core/SkEdgeBuilder.h",
  "../src/core/SkEdgeClipper.cpp",
  "../src/core/SkEdgeClipper.h",
  "../src/core/SkEndian.h",
  "../src/core/SkExecutor.cpp",
  "../src/core/SkAnalyticEdge.cpp",
  "../src/core/SkEdge.cpp",
  "../src/core/SkEdge.h",
  "../src/core/SkFDot6.h",
  "../src/core/SkFindAndPlaceGlyph.h",
  "../src/core/SkArenaAlloc.cpp",
  "../src/core/SkArenaAllocList.h",
  "../src/core/SkGaussFilter.cpp",
  "../src/core/SkGaussFilter.h",
  "../src/core/SkFlattenable.cpp",
  "../src/core/SkFont.cpp",
  "../src/core/SkFontLCDConfig.cpp",
  "../src/core/SkFontMgr.cpp",
  "../src/core/SkFontDescriptor.cpp",
  "../src/core/SkFontDescriptor.h",
  "../src/core/SkFontPriv.cpp",
  "../src/core/SkFontStream.cpp",
  "../src/core/SkFontStream.h",
  "../src/core/SkFuzzLogging.h",
  "../src/core/SkGeometry.cpp",
  "../src/core/SkGeometry.h",
  "../src/core/SkGlobalInitialization_core.cpp",
  "../src/core/SkGlyph.h",
  "../src/core/SkGlyph.cpp",
  "../src/core/SkGlyphRun.cpp",
  "../src/core/SkGlyphRun.h",
  "../src/core/SkGlyphRunPainter.cpp",
  "../src/core/SkGlyphRunPainter.h",
  "../src/core/SkGpuBlurUtils.h",
  "../src/core/SkGpuBlurUtils.cpp",
  "../src/core/SkGraphics.cpp",
  "../src/core/SkHalf.cpp",
  "../src/core/SkICC.cpp",
  "../src/core/SkImageFilter.cpp",
  "../src/core/SkImageFilterCache.cpp",
  "../src/core/SkImageFilterCache.h",
  "../src/core/SkImageInfo.cpp",
  "../src/core/SkImageGenerator.cpp",
  "../src/core/SkLineClipper.cpp",
  "../src/core/SkLiteDL.cpp",
  "../src/core/SkLiteRecorder.cpp",
  "../src/core/SkLocalMatrixImageFilter.cpp",
  "../src/core/SkLocalMatrixImageFilter.h",
  "../src/core/SkMD5.cpp",
  "../src/core/SkMD5.h",
  "../src/core/SkMakeUnique.h",
  "../src/core/SkMallocPixelRef.cpp",
  "../src/core/SkMask.cpp",
  "../src/core/SkMask.h",
  "../src/core/SkMaskBlurFilter.h",
  "../src/core/SkMaskBlurFilter.cpp",
  "../src/core/SkMaskCache.cpp",
  "../src/core/SkMaskFilter.cpp",
  "../src/core/SkMaskGamma.cpp",
  "../src/core/SkMaskGamma.h",
  "../src/core/SkMath.cpp",
  "../src/core/SkMathPriv.h",
  "../src/core/SkMatrix.cpp",
  "../src/core/SkMatrix44.cpp",
  "../src/core/SkMatrixImageFilter.cpp",
  "../src/core/SkMatrixImageFilter.h",
  "../src/core/SkMatrixUtils.h",
  "../src/core/SkMipMap.cpp",
  "../src/core/SkMipMap.h",
  "../src/core/SkMiniRecorder.cpp",
  "../src/core/SkMiniRecorder.h",
  "../src/core/SkMixer.cpp",
  "../src/core/SkModeColorFilter.cpp",
  "../src/core/SkNextID.h",
  "../src/core/SkLatticeIter.cpp",
  "../src/core/SkLatticeIter.h",
  "../src/core/SkNormalFlatSource.cpp",
  "../src/core/SkNormalFlatSource.h",
  "../src/core/SkNormalMapSource.cpp",
  "../src/core/SkNormalMapSource.h",
  "../src/core/SkNormalSource.cpp",
  "../src/core/SkNormalSource.h",
  "../src/core/SkOpts.cpp",
  "../src/core/SkOpts.h",
  "../src/core/SkOrderedReadBuffer.h",
  "../src/core/SkOSFile.h",
  "../src/core/SkOverdrawCanvas.cpp",
  "../src/core/SkPaint.cpp",
  "../src/core/SkPaintDefaults.h",
  "../src/core/SkPaintPriv.cpp",
  "../src/core/SkPaintPriv.h",
  "../src/core/SkPath.cpp",
  "../src/core/SkPath_serial.cpp",
  "../src/core/SkPathEffect.cpp",
  "../src/core/SkPathMeasure.cpp",
  "../src/core/SkPathPriv.h",
  "../src/core/SkPathRef.cpp",
  "../src/core/SkPixelRef.cpp",
  "../src/core/SkPixmap.cpp",
  "../src/core/SkPoint.cpp",
  "../src/core/SkPoint3.cpp",
  "../src/core/SkPromiseImageTexture.cpp",
  "../src/core/SkPtrRecorder.cpp",
  "../src/core/SkQuadClipper.cpp",
  "../src/core/SkQuadClipper.h",
  "../src/core/SkRasterClip.cpp",
  "../src/core/SkRasterPipeline.cpp",
  "../src/core/SkRasterPipelineBlitter.cpp",
  "../src/core/SkReadBuffer.h",
  "../src/core/SkReadBuffer.cpp",
  "../src/core/SkReader32.h",
  "../src/core/SkRecord.cpp",
  "../src/core/SkRecords.cpp",
  "../src/core/SkRecords.h",
  "../src/core/SkRecordDraw.cpp",
  "../src/core/SkRecordOpts.cpp",
  "../src/core/SkRecordOpts.h",
  "../src/core/SkRecordPattern.h",
  "../src/core/SkRect.cpp",
  "../src/core/SkRegion.cpp",
  "../src/core/SkRegionPriv.h",
  "../src/core/SkRegion_path.cpp",
  "../src/core/SkRemoteGlyphCache.h",
  "../src/core/SkRemoteGlyphCache.cpp",
  "../src/core/SkRemoteGlyphCacheImpl.h",
  "../src/core/SkResourceCache.cpp",
  "../src/core/SkRRect.cpp",
  "../src/core/SkRRectPriv.h",
  "../src/core/SkRTree.h",
  "../src/core/SkRTree.cpp",
  "../src/core/SkRWBuffer.cpp",
  "../src/core/SkScalar.cpp",
  "../src/core/SkScalerContext.cpp",
  "../src/core/SkScalerContext.h",
  "../src/core/SkScaleToSides.h",
  "../src/core/SkScan.cpp",
  "../src/core/SkScan.h",
  "../src/core/SkScanPriv.h",
  "../src/core/SkScan_AAAPath.cpp",
  "../src/core/SkScan_DAAPath.cpp",
  "../src/core/SkScan_AntiPath.cpp",
  "../src/core/SkScan_Antihair.cpp",
  "../src/core/SkScan_Hairline.cpp",
  "../src/core/SkScan_Path.cpp",
  "../src/core/SkScopeExit.h",
  "../src/core/SkSemaphore.cpp",
  "../src/core/SkSharedMutex.cpp",
  "../src/core/SkSharedMutex.h",
  "../src/core/SkSpan.h",
  "../src/core/SkSpecialImage.cpp",
  "../src/core/SkSpecialImage.h",
  "../src/core/SkSpecialSurface.cpp",
  "../src/core/SkSpecialSurface.h",
  "../src/core/SkSpinlock.cpp",
  "../src/core/SkSpriteBlitter_ARGB32.cpp",
  "../src/core/SkSpriteBlitter_RGB565.cpp",
  "../src/core/SkSpriteBlitter.h",
  "../src/core/SkStream.cpp",
  "../src/core/SkStreamPriv.h",
  "../src/core/SkStrike.cpp",
  "../src/core/SkStrike.h",
  "../src/core/SkStrikeCache.cpp",
  "../src/core/SkStrikeCache.h",
  "../src/core/SkStrikeInterface.h",
  "../src/core/SkString.cpp",
  "../src/core/SkStringUtils.cpp",
  "../src/core/SkStroke.h",
  "../src/core/SkStroke.cpp",
  "../src/core/SkStrokeRec.cpp",
  "../src/core/SkStrokerPriv.cpp",
  "../src/core/SkStrokerPriv.h",
  "../src/core/SkSurfaceCharacterization.cpp",
  "../src/core/SkSurfacePriv.h",
  "../src/core/SkSwizzle.cpp",
  "../src/core/SkTaskGroup.cpp",
  "../src/core/SkTaskGroup.h",
  "../src/core/SkTDPQueue.h",
  "../src/core/SkTDynamicHash.h",
  "../src/core/SkTextBlob.cpp",
  "../src/core/SkTextBlobPriv.h",
  "../src/core/SkTextFormatParams.h",
  "../src/core/SkTextToPathIter.h",
  "../src/core/SkTime.cpp",

  "../src/core/SkThreadID.cpp",
  "../src/core/SkTLList.h",
  "../src/core/SkTLS.cpp",
  "../src/core/SkTMultiMap.h",
  "../src/core/SkTraceEvent.h",
  "../src/core/SkTraceEventCommon.h",
  "../src/core/SkTSearch.cpp",
  "../src/core/SkTSort.h",
  "../src/core/SkTTopoSort.h",
  "../src/core/SkTypeface.cpp",
  "../src/core/SkTypeface_remote.h",
  "../src/core/SkTypeface_remote.cpp",
  "../src/core/SkTypefaceCache.cpp",
  "../src/core/SkTypefaceCache.h",
  "../src/core/SkTypefacePriv.h",
  "../src/core/SkUnPreMultiply.cpp",
  "../src/core/SkUtils.cpp",
  "../src/core/SkUtils.h",
  "../src/core/SkValidationUtils.h",
  "../src/core/SkVertices.cpp",
  "../src/core/SkVertState.cpp",
  "../src/core/SkWriteBuffer.cpp",
  "../src/core/SkWriter32.cpp",
  "../src/core/SkWriter32.h",
  "../src/core/SkXfermode.cpp",
  "../src/core/SkXfermodeInterpretation.cpp",
  "../src/core/SkXfermodeInterpretation.h",
  "../src/core/SkYUVPlanesCache.cpp",
  "../src/core/SkYUVPlanesCache.h",
  "../src/core/SkYUVASizeInfo.cpp",

  "../src/image/SkImage.cpp",

  #        "../src/image/SkImage_Gpu.cpp",
  "../src/image/SkImage_Lazy.cpp",
  "../src/image/SkImage_Lazy.h",
  "../src/image/SkImage_Raster.cpp",
  "../src/image/SkSurface.cpp",
  "../src/image/SkSurface_Base.h",

  #        "../src/image/SkSurface_Gpu.cpp",
  "../src/image/SkSurface_Raster.cpp",

  "../src/shaders/SkBitmapProcShader.cpp",
  "../src/shaders/SkBitmapProcShader.h",
  "../src/shaders/SkColorFilterShader.cpp",
  "../src/shaders/SkColorFilterShader.h",
  "../src/shaders/SkColorShader.cpp",
  "../src/shaders/SkColorShader.h",
  "../src/shaders/SkComposeShader.cpp",
  "../src/shaders/SkComposeShader.h",
  "../src/shaders/SkEmptyShader.h",
  "../src/shaders/SkImageShader.cpp",
  "../src/shaders/SkImageShader.h",
  "../src/shaders/SkLightingShader.cpp",
  "../src/shaders/SkLightingShader.h",
  "../src/shaders/SkLights.cpp",
  "../src/shaders/SkLights.h",
  "../src/shaders/SkLocalMatrixShader.cpp",
  "../src/shaders/SkLocalMatrixShader.h",
  "../src/shaders/SkMixerShader.cpp",
  "../src/shaders/SkShader.cpp",
  "../src/shaders/SkShaderBase.h",

  "../src/opts/SkBlitMask_opts.h",
  "../src/opts/SkBlitRow_opts.h",
  "../src/opts/SkChecksum_opts.h",
  "../src/opts/SkRasterPipeline_opts.h",
  "../src/opts/SkSwizzler_opts.h",
  "../src/opts/SkUtils_opts.h",
  "../src/opts/SkXfermode_opts.h",

  # private
  "../include/private/SkArenaAlloc.h",
  "../include/private/SkChecksum.h",
  "../include/private/SkDeferredDisplayList.h",
  "../include/private/SkFixed.h",
  "../include/private/SkFloatBits.h",
  "../include/private/SkFloatingPoint.h",
  "../include/private/SkHalf.h",
  "../include/private/SkMalloc.h",
  "../include/private/SkMessageBus.h",
  "../include/private/SkMutex.h",
  "../include/private/SkNoncopyable.h",
  "../include/private/SkNx.h",
  "../include/private/SkNx_neon.h",
  "../include/private/SkNx_sse.h",
  "../include/private/SkOnce.h",
  "../include/private/SkPathRef.h",
  "../include/private/SkSemaphore.h",
  "../include/private/SkShadowFlags.h",
  "../include/private/SkSpinlock.h",
  "../include/private/SkTemplates.h",
  "../include/private/SkTArray.h",
  "../include/private/SkTDArray.h",
  "../include/private/SkTFitsIn.h",
  "../include/private/SkTHash.h",
  "../include/private/SkTInternalLList.h",
  "../include/private/SkThreadID.h",
  "../include/private/SkTSearch.h",
  "../include/private/SkTLogic.h",
  "../include/private/SkWeakRefCnt.h",
], "abspath")

skia_pathops_public = get_path_info([
  "../include/pathops/SkPathOps.h",
], "abspath")

skia_pathops_sources = get_path_info([
  "../src/pathops/SkAddIntersections.cpp",
  "../src/pathops/SkDConicLineIntersection.cpp",
  "../src/pathops/SkDCubicLineIntersection.cpp",
  "../src/pathops/SkDCubicToQuads.cpp",
  "../src/pathops/SkDLineIntersection.cpp",
  "../src/pathops/SkDQuadLineIntersection.cpp",
  "../src/pathops/SkIntersections.cpp",
  "../src/pathops/SkOpAngle.cpp",
  "../src/pathops/SkOpBuilder.cpp",
  "../src/pathops/SkOpCoincidence.cpp",
  "../src/pathops/SkOpContour.cpp",
  "../src/pathops/SkOpCubicHull.cpp",
  "../src/pathops/SkOpEdgeBuilder.cpp",
  "../src/pathops/SkOpSegment.cpp",
  "../src/pathops/SkOpSpan.cpp",
  "../src/pathops/SkPathOpsAsWinding.cpp",
  "../src/pathops/SkPathOpsCommon.cpp",
  "../src/pathops/SkPathOpsConic.cpp",
  "../src/pathops/SkPathOpsCubic.cpp",
  "../src/pathops/SkPathOpsCurve.cpp",
  "../src/pathops/SkPathOpsDebug.cpp",
  "../src/pathops/SkPathOpsLine.cpp",
  "../src/pathops/SkPathOpsOp.cpp",
  "../src/pathops/SkPathOpsQuad.cpp",
  "../src/pathops/SkPathOpsRect.cpp",
  "../src/pathops/SkPathOpsSimplify.cpp",
  "../src/pathops/SkPathOpsTSect.cpp",
  "../src/pathops/SkPathOpsTightBounds.cpp",
  "../src/pathops/SkPathOpsTypes.cpp",
  "../src/pathops/SkPathOpsWinding.cpp",
  "../src/pathops/SkPathWriter.cpp",
  "../src/pathops/SkReduceOrder.cpp",

  "../src/pathops/SkAddIntersections.h",
  "../src/pathops/SkIntersectionHelper.h",
  "../src/pathops/SkIntersections.h",
  "../src/pathops/SkLineParameters.h",
  "../src/pathops/SkOpAngle.h",
  "../src/pathops/SkOpCoincidence.h",
  "../src/pathops/SkOpContour.h",
  "../src/pathops/SkOpEdgeBuilder.h",
  "../src/pathops/SkOpSegment.h",
  "../src/pathops/SkOpSpan.h",
  "../src/pathops/SkPathOpsBounds.h",
  "../src/pathops/SkPathOpsCommon.h",
  "../src/pathops/SkPathOpsConic.h",
  "../src/pathops/SkPathOpsCubic.h",
  "../src/pathops/SkPathOpsCurve.h",
  "../src/pathops/SkPathOpsDebug.h",
  "../src/pathops/SkPathOpsLine.h",
  "../src/pathops/SkPathOpsPoint.h",
  "../src/pathops/SkPathOpsQuad.h",
  "../src/pathops/SkPathOpsRect.h",
  "../src/pathops/SkPathOpsTSect.h",
  "../src/pathops/SkPathOpsTypes.h",
  "../src/pathops/SkPathWriter.h",
  "../src/pathops/SkReduceOrder.h",
], "abspath")

skia_skpicture_public = get_path_info([
  "../include/core/SkMultiPictureDraw.h",
  "../include/core/SkPicture.h",
  "../include/core/SkPictureRecorder.h",
], "abspath")

skia_skpicture_sources = get_path_info([
  "../src/core/SkBigPicture.cpp",
  "../src/core/SkMultiPictureDraw.cpp",
  "../src/core/SkPicture.cpp",
  "../src/core/SkPictureCommon.h",
  "../src/core/SkPictureData.cpp",
  "../src/core/SkPictureData.h",
  "../src/core/SkPictureFlat.cpp",
  "../src/core/SkPictureFlat.h",
  "../src/core/SkPictureImageGenerator.cpp",
  "../src/core/SkPicturePlayback.cpp",
  "../src/core/SkPicturePlayback.h",
  "../src/core/SkPictureRecord.cpp",
  "../src/core/SkPictureRecord.h",
  "../src/core/SkPictureRecorder.cpp",
  "../src/core/SkRecordedDrawable.cpp",
  "../src/core/SkRecorder.cpp",
  "../src/shaders/SkPictureShader.cpp",
  "../src/shaders/SkPictureShader.h",
], "abspath")

skia_core_sources += skia_pathops_sources
skia_core_sources += skia_skpicture_sources

skia_core_public += skia_pathops_public
skia_core_public += skia_skpicture_public

skia_core_defines = []  #  Used to be used by Chromium, but no longer.
